[gd_scene load_steps=12 format=3 uid="uid://cecihr57s5127"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_tluj8"]
[ext_resource type="PackedScene" uid="uid://c0dcgeye1xs5d" path="res://Reuseable Templates/nine_patch_rect_dialogue.tscn" id="2_6u6xl"]
[ext_resource type="Texture2D" uid="uid://ps1r0swx1oxn" path="res://Art/BlakeTest/Placeholder_Coin.png" id="3_ounph"]
[ext_resource type="Texture2D" uid="uid://dw6ndbyxue81a" path="res://Art/BlakeTest/Placeholder_Potion_Icon.png" id="4_8tdqd"]
[ext_resource type="LabelSettings" uid="uid://bd184ntgknbm1" path="res://Fonts/MainMenuButtonFont.tres" id="4_b7ady"]
[ext_resource type="Texture2D" uid="uid://dsp0cggtj1jk6" path="res://Art/UI/General Text Button.png" id="5_8hc87"]
[ext_resource type="Texture2D" uid="uid://voxrln1urfrd" path="res://Art/UI/General Text ButtonPressed.png" id="6_ikjhs"]

[sub_resource type="Animation" id="Animation_bu4ni"]
resource_name = "background_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gpgc7"]
_data = {
"background_in": SubResource("Animation_bu4ni")
}

[sub_resource type="Animation" id="Animation_wn71k"]
resource_name = "ui_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cn431"]
_data = {
"ui_in": SubResource("Animation_wn71k")
}

[node name="Shop" type="CanvasLayer"]
layer = 3
script = ExtResource("1_tluj8")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_gpgc7")
}

[node name="shop_ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextBackground" parent="shop_ui" instance=ExtResource("2_6u6xl")]
layout_mode = 1
anchor_left = 0.0208333
anchor_top = 0.125926
anchor_right = 0.975
anchor_bottom = 0.97037
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 1
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="PlaceholderCoin" type="Sprite2D" parent="shop_ui"]
modulate = Color(1, 1, 0, 1)
position = Vector2(133, 229)
scale = Vector2(0.0702876, 0.0702876)
texture = ExtResource("3_ounph")

[node name="PlaceholderPotion" type="Sprite2D" parent="shop_ui"]
modulate = Color(1, 0, 0, 1)
position = Vector2(1632, 234)
scale = Vector2(0.0830241, 0.0830241)
texture = ExtResource("4_8tdqd")

[node name="PlayerCoins" type="Label" parent="shop_ui"]
layout_mode = 0
anchor_left = 0.110417
anchor_top = 0.187037
anchor_right = 0.167708
anchor_bottom = 0.232407
text = "5"
label_settings = ExtResource("4_b7ady")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayerPotions" type="Label" parent="shop_ui"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.889583
anchor_top = 0.199074
anchor_right = 0.946875
anchor_bottom = 0.244444
text = "5"
label_settings = ExtResource("4_b7ady")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PotionButton" type="TextureButton" parent="shop_ui"]
offset_left = 946.0
offset_top = 524.0
offset_right = 1113.0
offset_bottom = 608.0
texture_normal = ExtResource("5_8hc87")
texture_hover = ExtResource("6_ikjhs")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="shop_ui/PotionButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -22.0
offset_right = 72.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_font_sizes/font_size = 31
text = "Buy"
label_settings = ExtResource("4_b7ady")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PotionText" type="Label" parent="shop_ui/PotionButton"]
layout_mode = 0
offset_left = -373.0
offset_top = 25.0
offset_right = -32.0
offset_bottom = 65.0
text = "Potion: 5 coins"
label_settings = ExtResource("4_b7ady")
horizontal_alignment = 2

[node name="Label" type="Label" parent="shop_ui"]
offset_left = 708.0
offset_top = -30.0
offset_right = 1176.0
offset_bottom = 136.0
theme_override_font_sizes/font_size = 121
text = "SHOP"
horizontal_alignment = 1

[node name="BackButton" type="TextureButton" parent="shop_ui"]
offset_left = 82.0
offset_top = 924.0
offset_right = 249.0
offset_bottom = 1008.0
texture_normal = ExtResource("5_8hc87")
texture_hover = ExtResource("6_ikjhs")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="shop_ui/BackButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -22.0
offset_right = 72.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.356863, 0.356863, 0.356863, 1)
theme_override_font_sizes/font_size = 31
text = "Back
"
label_settings = ExtResource("4_b7ady")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cn431")
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="button_down" from="shop_ui/PotionButton" to="." method="_on_potion_button_button_down"]
[connection signal="button_down" from="shop_ui/BackButton" to="." method="_on_back_button_button_down"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]
